--- a/chronos-forecasting/scripts/training/configs/chronos-t5-tiny-modified_auto.yaml
+++ b/chronos-forecasting/scripts/training/configs/chronos-t5-tiny-modified_auto.yaml
@@ -179,7 +179,7 @@ probability:
 context_length: 512
 prediction_length: 64
 min_past: 60
-max_steps: 2000
+max_steps: 10000
 save_steps: 100_000
 log_steps: 500
 per_device_train_batch_size: 32
@@ -188,7 +188,7 @@ optim: adamw_torch_fused
 num_samples: 20
 shuffle_buffer_length: 100_000
 gradient_accumulation_steps: 1
-model_id: google/t5-efficient-tiny
+model_id: amazon/chronos-t5-tiny
 model_type: seq2seq
 random_init: false
 tie_embeddings: true
